<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="Post !t"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/app_logo_tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_logo_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/tag_line"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />


    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo_tagline" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/registration_text"
        android:textColor="#212121"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/full_name_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/full_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/full_name_field"
        app:layout_constraintBottom_toTopOf="@id/username_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/username_field"
        app:layout_constraintBottom_toTopOf="@id/email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_field" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        app:layout_constraintBottom_toTopOf="@id/password_field"
        />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/password_confirm_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_field" />

    <EditText
        android:id="@+id/password_confirm_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/confirm_password_field"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_field" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register_now_btn"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toTopOf="@id/goto_login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirm_field" />


    <TextView
        android:id="@+id/goto_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/goto_login_text"
        app:layout_constraintBottom_toTopOf="@id/goto_login_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn" />

    <TextView
        android:id="@+id/goto_login_link"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/login_here"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goto_login_text" />


</androidx.constraintlayout.widget.ConstraintLayout>