<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


    <TextView
        android:id="@+id/app_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="Post !t"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/app_logo_tagline_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_logo_tagline_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/tag_line"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/divider_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo_login" />

    <View
        android:id="@+id/divider_login"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo_tagline_login" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="#212121"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/email_field_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_login" />

    <EditText
        android:id="@+id/email_field_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password_field_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text" />

    <EditText
        android:id="@+id/password_field_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_field_login" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login_btn"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toTopOf="@id/goto_register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_field_login" />

    <TextView
        android:id="@+id/goto_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/goto_register_text"
        app:layout_constraintBottom_toTopOf="@id/goto_register_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <TextView
        android:id="@+id/goto_register_link"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/register_here"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goto_register_text" />

</androidx.constraintlayout.widget.ConstraintLayout>