<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addpost.AddPostActivity">

    <Button
        android:id="@+id/select_picture_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/select_a_picture"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/post_description_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/post_description_field"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_a_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/post_it_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_picture_btn" />

    <Button
        android:id="@+id/post_it_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/post_it_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_description_field"
        app:layout_constraintBottom_toTopOf="@id/preview_text"
        />

    <TextView
        android:id="@+id/preview_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/preview_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_it_btn"
        app:layout_constraintBottom_toTopOf="@id/picture_preview"
        />

    <ImageView
        android:id="@+id/picture_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview_text"
        app:srcCompat="@drawable/ic_baseline_broken_image_24"
        tools:ignore="VectorDrawableCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>